--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,50 @@
+anyascii==0.3.2
+cached_path==1.6.3
+click==8.1.7
+cn2an==0.5.22
+eng_to_ipa==0.0.2
 fairseq==0.12.2
 faiss_cpu==1.7.4
-gradio==4.7.1
-librosa==0.10.0
+fastapi==0.112.1
+faster_whisper==0.9.0
+g2p_en==2.1.0
+g2pkk==0.1.2
+gradio==4.42.0
+gruut==2.2.3
+gruut_ipa==0.13.0
+huggingface_hub==0.23.5
+inflect==7.3.1
+inflect==7.0.0
+jamo==0.4.1
+jieba==0.42.1
+langid==1.1.6
+librosa==0.9.1
+loguru==0.7.2
+matplotlib==3.8.4
+MeCab==0.996.3
+mecab_python3==1.0.9
+num2words==0.5.12
+numba==0.60.0
 numpy==1.22.0
-praat-parselmouth
+parselmouth==1.1.1
+pydub==0.25.1
+pykakasi==2.2.1
+pypinyin==0.50.0
 pyworld==0.3.4
-Requests==2.31.0
-scipy==1.11.4
+Requests==2.32.3
+scipy==1.14.1
+setuptools==72.2.0
+setuptools==69.0.3
+six==1.16.0
+soundfile==0.12.1
 torch==2.2.0
+torchaudio==2.2.0
 torchcrepe==0.0.22
+tqdm==4.66.5
+transformers==4.33.0
 TTS==0.21.1
-botocore>=1.34.98
-cached_path>=1.6.2
+TTS==0.22.0
+Unidecode==1.3.7
+uvicorn==0.30.6
+wavmark==0.0.3
+whisper_timestamped==1.14.2
